kubernetes/kenobi/longhorn-system/longhorn.virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: longhorn

spec:
  gateways:
    - istio-system/feldman-in
  hosts:
    - longhorn.feldman.in
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: longhorn-frontend
            port:
              number: 80
